style : some alignment fixes

--- a/src/Components/PostComponent.module.css
+++ b/src/Components/PostComponent.module.css
@@ -1,118 +1,129 @@
 .postcontainer {
-    display: flex;
-    gap: 40px;
-    border: 1px solid #A5A735;
-    height: auto;
-    padding: 15px 20px;
-    max-width: 100%;
-    font-family: 'Recursive', sans-serif;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  gap: 40px;
+  border: 1px solid #a5a735;
+  height: auto;
+  padding: 15px 20px;
+  max-width: 100%;
+  font-family: "Recursive", sans-serif;
+  align-items: center;
+  justify-content: space-between;
 }
 .imgPost {
-    /* display: none; */
-    display: flex;
-    gap: 40px;
-    border: 1px solid #A5A735;
-    height: auto;
-    padding: 15px 20px;
-    max-width: 100%;
-    font-family: 'Recursive', sans-serif;
-    justify-content: space-between;
-    position: relative;
-    background-image: url(../assets/Grid-Lines.webp);
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: 100% 60%;
+  /* display: none; */
+  display: flex;
+  gap: 40px;
+  border: 1px solid #a5a735;
+  height: auto;
+  padding: 15px 20px;
+  max-width: 100%;
+  font-family: "Recursive", sans-serif;
+  justify-content: space-between;
+  position: relative;
+  background-image: url(../assets/Grid-Lines.webp);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 100% 60%;
 }
-.postcontainer h3, .imgPost h3 {
-    margin-bottom: 0px;
-    margin-top: 0px;
-    font-size: 18px;
-    font-weight: 400;
+.imgAndPost {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-.postcontainer a, .imgPost a {
-    text-decoration: none;
+.postcontainer h3,
+.imgPost h3 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.postcontainer a,
+.imgPost a {
+  text-decoration: none;
 }
 
 .content {
-    font-family: 'Recursive', sans-serif;
-    font-weight: 400;
-    line-height: 20px;
-    max-width: 400px;
-    font-style: normal;
-    margin-bottom: 8px;
+  font-family: "Recursive", sans-serif;
+  font-weight: 400;
+  line-height: 20px;
+  max-width: 400px;
+  font-style: normal;
+  margin-bottom: 8px;
 }
 .smalltext {
-    font-size: 10px;
-    font-weight: 400;
-    margin-top: 0px;
+  font-size: 10px;
+  font-weight: 400;
+  margin-top: 0px;
 }
 .username {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 .buttons {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 .usernameButton {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .imgUsernameButton {
-    /* display: none; */
-    display: flex;
+  /* display: none; */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+@media screen and (max-width: 641px) {
+  .postcontainer {
     flex-direction: column;
-    gap: 10px;
-    margin-top: 20px;
+    gap: 15px;
+  }
+  .imgPost {
+    gap: 15px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-size: 100% 40%;
+  }
+  .content {
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .usernameButton {
+    gap: 20px;
+  }
+  .imgUsernameButton {
+    gap: 20px;
+  }
+  .buttons {
+    gap: 40px;
+  }
 }
-@media screen and (max-width : 641px) {
-    .postcontainer {
-        flex-direction: column;
-        gap: 15px;
-    }
-    .imgPost {
-        gap: 15px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-size: 100% 40%;
-    }
-    .content {
-        min-width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-    .usernameButton {
-        gap: 20px;
-    }
-    .imgUsernameButton {
-        gap: 20px;
-    }
-    .buttons {
-        gap:  40px;
-    }
-}
-@media screen and (max-width : 455px) {
-    .content {
-        text-align: left;
-    }
-    .usernameButton {
-        min-width: 100%;
-    }
-    .imgUsernameButton {
-        min-width: 100%;
-    }
-    .buttons {
-        justify-content: space-between;
-    }
-    .buttons img {
-        width: 30px;
-        height: 32px;
-    }
+@media screen and (max-width: 455px) {
+  .content {
+    text-align: left;
+  }
+  .usernameButton {
+    min-width: 100%;
+  }
+  .imgUsernameButton {
+    min-width: 100%;
+  }
+  .buttons {
+    justify-content: space-between;
+  }
+  .buttons img {
+    width: 30px;
+    height: 32px;
+  }
+  .imgAndPost {
+    align-items: center;
+  }
 }
